[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/sprites/creatures/slime_blue_8p.png" type="Texture" id=1]
[ext_resource path="res://Resources/Slime.gd" type="Script" id=2]
[ext_resource path="res://HurtBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/effct_physic/HitBox.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 4.0
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
gravity = Vector3( 0, 98, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 30.0
scale = 3.0
scale_random = 1.0
color = Color( 0.282353, 0.533333, 0.698039, 1 )
hue_variation = 0.05
hue_variation_random = 1.0

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=6]
resource_name = "die"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Particles2D:amount")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.4 ),
"transitions": PoolRealArray( 0.435275, 1 ),
"update": 1,
"values": [ 30, 15 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_die_over"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Particles2D:process_material:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 3.0, 1.5 ]
}

[sub_resource type="Animation" id=5]
resource_name = "splash"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Particles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=4]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ), Vector2( 0, -0.5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 66, 15 )

[node name="Slime" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 12
collision_mask = 96
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 0.8, 0.8 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )
offset = Vector2( 0, -4 )

[node name="HurtBox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, -4 )
scale = Vector2( 1.97404, 3.07297 )
collision_layer = 12
collision_mask = 96

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -0.0045032, -0.196161 )
scale = Vector2( 1.02323, 0.251227 )

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 15
one_shot = true
explosiveness = 0.8
process_material = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/die = SubResource( 6 )
anims/splash = SubResource( 5 )
anims/walk = SubResource( 4 )

[node name="Detection" parent="." instance=ExtResource( 4 )]
scale = Vector2( 1.37057, 5.9005 )
collision_layer = 0

[node name="CollisionShape2D" parent="Detection" index="0"]
self_modulate = Color( 0.8, 0.776471, 0.129412, 1 )
position = Vector2( 0, -7 )
scale = Vector2( 1.0048, 1 )
shape = SubResource( 7 )

[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]

[editable path="HurtBox"]
[editable path="Detection"]
